syntax = "proto3";

package blockscout.interchainIndexer.v1;

option go_package = "github.com/blockscout/blockscout-rs/interchain-indexer";

import "google/protobuf/struct.proto";

service StatusService {
    rpc GetFullStatus(GetFullStatusRequest) returns (FullStatus);
    rpc GetStatusByIndexerName(GetStatusRequest) returns (IndexerStatus);
}

message GetFullStatusRequest { }

message GetStatusRequest {
    string indexer_name = 1;
}

message IndexerStatus {
  string name = 1;
  optional string description = 2;
  string state = 3;
  string init_timestamp = 4;
  optional google.protobuf.Struct extra_info = 5;
}

message FullStatus {
  repeated IndexerStatus indexers = 1;
}
